--- a/Framework/Engine/Utility/Include/Utility.vcxproj
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj
@@ -195,6 +195,7 @@ call CopyUtility.bat</Command>
     <ClInclude Include="..\..\Header\LightMgr.h" />
     <ClInclude Include="..\..\Header\Management.h" />
     <ClInclude Include="..\..\Header\PickingMgr.h" />
+    <ClInclude Include="..\..\Header\Pool.h" />
     <ClInclude Include="..\..\Header\ProtoMgr.h" />
     <ClInclude Include="..\..\Header\RcCol.h" />
     <ClInclude Include="..\..\Header\CubeTex.h" />
