--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -142,12 +142,6 @@
     <Filter Include="01. Scene\99. Tool">
       <UniqueIdentifier>{7cf087fe-bf53-4afe-9d21-9c25d1930ed1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="98. ImGui">
-      <UniqueIdentifier>{ee1f8b2c-dc81-407f-9927-5606613f56e1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="98. ImGui\Lib">
-      <UniqueIdentifier>{2e155ec3-a416-474d-927c-997f236cad7d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. GameObject\02. Monster\01. TrashBig">
       <UniqueIdentifier>{d649abb9-e5e4-4226-a35b-934833a4a34f}</UniqueIdentifier>
     </Filter>
@@ -199,29 +193,11 @@
     <Filter Include="02. GameObject\99. NPC\00. Tutorial">
       <UniqueIdentifier>{72e16abb-9044-4958-9999-738721d1c00d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\04. UI\01. NPCText">
-      <UniqueIdentifier>{9ebf1511-d022-4236-bcea-0cc7e49ceb8d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. GameObject\04. UI\99. ETC">
       <UniqueIdentifier>{cff99704-51e7-4561-9703-aca208e9d29c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\04. UI\99. ETC\00. AdventureBook">
-      <UniqueIdentifier>{4295009d-bbed-49af-be78-83404f7e0dfb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\04. UI\99. ETC\00. AdventureBook\00. Background">
-      <UniqueIdentifier>{09bc8756-f762-4582-9d13-2f0618ed54d9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\04. UI\99. ETC\00. AdventureBook\01. Pages">
-      <UniqueIdentifier>{b523e7fc-8d1b-4c14-aa22-a2ae5525fdde}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. GameObject\04. UI\00. PlayerInfo">
       <UniqueIdentifier>{bb0d5990-dc39-43a4-83d9-66f88c7745c1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\04. UI\99. ETC\01. Icon">
-      <UniqueIdentifier>{52a116df-b0d1-49a0-bddd-79286103269a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\04. UI\01. NPCText\00. Text">
-      <UniqueIdentifier>{a9d46f61-e263-4fd5-a5e5-f456e47dac41}</UniqueIdentifier>
     </Filter>
     <Filter Include="02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot">
       <UniqueIdentifier>{f24af292-0652-4de7-b3fc-936fc5c0259b}</UniqueIdentifier>
@@ -264,6 +240,42 @@
     </Filter>
     <Filter Include="02. GameObject\13. FixedObj\01. House">
       <UniqueIdentifier>{1b18d9ea-8f5d-4c79-a808-a4047c32b98c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager">
+      <UniqueIdentifier>{d3ea15ca-2d7c-47b8-8c2f-d26d0779445f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager\99. ImGui">
+      <UniqueIdentifier>{ee1f8b2c-dc81-407f-9927-5606613f56e1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager\99. ImGui\Lib">
+      <UniqueIdentifier>{2e155ec3-a416-474d-927c-997f236cad7d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager\01. Game">
+      <UniqueIdentifier>{addd15ce-37d3-4983-a363-35b0dab12fd8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager\02. UI">
+      <UniqueIdentifier>{96a58e6b-a18d-405b-8e5a-bbc85249e196}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\03. AdventureBook">
+      <UniqueIdentifier>{4295009d-bbed-49af-be78-83404f7e0dfb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\03. AdventureBook\00. Background">
+      <UniqueIdentifier>{09bc8756-f762-4582-9d13-2f0618ed54d9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\03. AdventureBook\01. Pages">
+      <UniqueIdentifier>{b523e7fc-8d1b-4c14-aa22-a2ae5525fdde}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\01. Icon">
+      <UniqueIdentifier>{52a116df-b0d1-49a0-bddd-79286103269a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\02. NPCText">
+      <UniqueIdentifier>{9ebf1511-d022-4236-bcea-0cc7e49ceb8d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\04. UI\02. NPCText\00. Text">
+      <UniqueIdentifier>{a9d46f61-e263-4fd5-a5e5-f456e47dac41}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="98. Manager\03. Inventory">
+      <UniqueIdentifier>{09146d52-6d44-40ef-8ce3-981c8bfc7d6f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -391,31 +403,31 @@
       <Filter>01. Scene\99. Tool</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\ImGuiMgr.h">
-      <Filter>98. ImGui</Filter>
+      <Filter>98. Manager\99. ImGui</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imconfig.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imgui.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imgui_impl_dx9.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imgui_impl_win32.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imgui_internal.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imstb_rectpack.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imstb_textedit.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imstb_truetype.h">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\TrashBig.h">
       <Filter>02. GameObject\02. Monster\01. TrashBig</Filter>
@@ -465,26 +477,23 @@
     <ClInclude Include="..\Header\NPC.h">
       <Filter>02. GameObject\99. NPC</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\UI_AdventureBook.h">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\00. Background</Filter>
-    </ClInclude>
     <ClInclude Include="..\Header\UI_BookBackground.h">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\00. Background</Filter>
+      <Filter>02. GameObject\04. UI\03. AdventureBook\00. Background</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\TutorialNPC.h">
       <Filter>02. GameObject\99. NPC\00. Tutorial</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\NPCText.h">
-      <Filter>02. GameObject\04. UI\01. NPCText</Filter>
+      <Filter>02. GameObject\04. UI\02. NPCText</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Icon.h">
-      <Filter>02. GameObject\04. UI\99. ETC\01. Icon</Filter>
+      <Filter>02. GameObject\04. UI\01. Icon</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\QuickSlot.h">
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Text.h">
-      <Filter>02. GameObject\04. UI\01. NPCText\00. Text</Filter>
+      <Filter>02. GameObject\04. UI\02. NPCText\00. Text</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\JellyBomb.h" />
     <ClInclude Include="..\Header\JellyCombined.h" />
@@ -512,7 +521,6 @@
       <Filter>02. GameObject\11. Item</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\TrashSlime.h" />
-    <ClInclude Include="..\Header\UI_NameTag.h" />
     <ClInclude Include="..\Header\SpitCactus.h">
       <Filter>02. GameObject\02. Monster\03. SpitCactus</Filter>
     </ClInclude>
@@ -538,8 +546,6 @@
     <ClInclude Include="..\Header\JellyBombCreator.h" />
     <ClInclude Include="..\Header\LightFlower.h" />
     <ClInclude Include="..\Header\Turret.h" />
-    <ClInclude Include="..\Header\UI_Pages.h" />
-    <ClInclude Include="..\Header\UI_ShortCutKey.h" />
     <ClInclude Include="Grass.h" />
     <ClInclude Include="..\Header\Effect.h">
       <Filter>02. GameObject\98. Effect</Filter>
@@ -555,6 +561,24 @@
     </ClInclude>
     <ClInclude Include="..\Header\House.h">
       <Filter>02. GameObject\13. FixedObj\01. House</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_AdventureBook.h">
+      <Filter>02. GameObject\04. UI\03. AdventureBook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UIMgr.h">
+      <Filter>98. Manager\02. UI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_NameTag.h">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_ShortCutKey.h">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_Pages.h">
+      <Filter>02. GameObject\04. UI\03. AdventureBook\01. Pages</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\InventoryMgr.h">
+      <Filter>98. Manager\03. Inventory</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -671,28 +695,28 @@
       <Filter>02. GameObject\01. Player\State\13. GameOver</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\ImGuiMgr.cpp">
-      <Filter>98. ImGui</Filter>
+      <Filter>98. Manager\99. ImGui</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_demo.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_draw.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_impl_dx9.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_impl_win32.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_tables.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_widgets.cpp">
-      <Filter>98. ImGui\Lib</Filter>
+      <Filter>98. Manager\99. ImGui\Lib</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\TrashBig.cpp">
       <Filter>02. GameObject\02. Monster\01. TrashBig</Filter>
@@ -700,7 +724,6 @@
     <ClCompile Include="..\Code\BlueBeatle.cpp">
       <Filter>02. GameObject\02. Monster\02. BlueBeatle</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\Scene_Tool.cpp" />
     <ClCompile Include="..\Code\BalpanObj.cpp">
       <Filter>02. GameObject\06. FieldObj\03. BalpanObj</Filter>
     </ClCompile>
@@ -740,26 +763,23 @@
     <ClCompile Include="..\Code\NPC.cpp">
       <Filter>02. GameObject\99. NPC</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\UI_AdventureBook.cpp">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\00. Background</Filter>
-    </ClCompile>
     <ClCompile Include="..\Code\UI_BookBackground.cpp">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\00. Background</Filter>
+      <Filter>02. GameObject\04. UI\03. AdventureBook\00. Background</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\TutorialNPC.cpp">
       <Filter>02. GameObject\99. NPC\00. Tutorial</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\NPCText.cpp">
-      <Filter>02. GameObject\04. UI\01. NPCText</Filter>
+      <Filter>02. GameObject\04. UI\02. NPCText</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Icon.cpp">
-      <Filter>02. GameObject\04. UI\99. ETC\01. Icon</Filter>
+      <Filter>02. GameObject\04. UI\01. Icon</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\QuickSlot.cpp">
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Text.cpp">
-      <Filter>02. GameObject\04. UI\01. NPCText\00. Text</Filter>
+      <Filter>02. GameObject\04. UI\02. NPCText\00. Text</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\JellyBomb.cpp" />
     <ClCompile Include="..\Code\JellyCombined.cpp" />
@@ -787,7 +807,6 @@
       <Filter>02. GameObject\11. Item</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\TrashSlime.cpp" />
-    <ClCompile Include="..\Code\UI_NameTag.cpp" />
     <ClCompile Include="..\Code\SpitCactus.cpp">
       <Filter>02. GameObject\02. Monster\03. SpitCactus</Filter>
     </ClCompile>
@@ -813,8 +832,6 @@
     <ClCompile Include="..\Code\JellyBombCreator.cpp" />
     <ClCompile Include="..\Code\LightFlower.cpp" />
     <ClCompile Include="..\Code\Turret.cpp" />
-    <ClCompile Include="..\Code\UI_Pages.cpp" />
-    <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
     <ClCompile Include="Grass.cpp" />
     <ClCompile Include="..\Code\Effect.cpp">
       <Filter>02. GameObject\98. Effect</Filter>
@@ -830,6 +847,27 @@
     </ClCompile>
     <ClCompile Include="..\Code\House.cpp">
       <Filter>02. GameObject\13. FixedObj\01. House</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_AdventureBook.cpp">
+      <Filter>02. GameObject\04. UI\03. AdventureBook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UIMgr.cpp">
+      <Filter>98. Manager\02. UI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_NameTag.cpp">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_ShortCutKey.cpp">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_Pages.cpp">
+      <Filter>02. GameObject\04. UI\03. AdventureBook\01. Pages</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\InventoryMgr.cpp">
+      <Filter>98. Manager\03. Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Scene_Tool.cpp">
+      <Filter>01. Scene\99. Tool</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
