--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -447,9 +447,6 @@
     <ClInclude Include="..\Header\HitObj.h">
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\UIPages.h">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\01. Pages</Filter>
-    </ClInclude>
     <ClInclude Include="..\Header\NPC.h">
       <Filter>02. GameObject\99. NPC</Filter>
     </ClInclude>
@@ -522,6 +519,32 @@
     <ClInclude Include="..\Header\GolemFace.h">
       <Filter>02. GameObject\10. Boss\00. SunGolem\06. Face</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\ButterFly.h" />
+    <ClInclude Include="..\Header\FixedObj.h" />
+    <ClInclude Include="..\Header\House.h" />
+    <ClInclude Include="..\Header\JellyBombCreator.h" />
+    <ClInclude Include="..\Header\LightFlower.h" />
+    <ClInclude Include="..\Header\Tile.h" />
+    <ClInclude Include="..\Header\Turret.h" />
+    <ClInclude Include="..\Header\Tree.h" />
+    <ClInclude Include="..\Header\UI_Pages.h" />
+    <ClInclude Include="..\Header\UI_ShortCutKey.h" />
+    <ClInclude Include="Grass.h" />
+    <ClInclude Include="..\Header\Item_Hat_Turtle.h">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Item_Hat_Mask.h">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Item_Hat_Drill.h">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Item_Hat_Light.h">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Player_Skill_Barrier.h" />
+    <ClInclude Include="..\Header\Player_Skill_Turtle.h" />
+    <ClInclude Include="..\Header\Player_Skill_Drill.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -703,9 +726,6 @@
     <ClCompile Include="..\Code\HitObj.cpp">
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\UIPages.cpp">
-      <Filter>02. GameObject\04. UI\99. ETC\00. AdventureBook\01. Pages</Filter>
-    </ClCompile>
     <ClCompile Include="..\Code\NPC.cpp">
       <Filter>02. GameObject\99. NPC</Filter>
     </ClCompile>
@@ -778,6 +798,32 @@
     <ClCompile Include="..\Code\GolemFace.cpp">
       <Filter>02. GameObject\10. Boss\00. SunGolem\06. Face</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\ButterFly.cpp" />
+    <ClCompile Include="..\Code\FixedObj.cpp" />
+    <ClCompile Include="..\Code\House.cpp" />
+    <ClCompile Include="..\Code\JellyBombCreator.cpp" />
+    <ClCompile Include="..\Code\LightFlower.cpp" />
+    <ClCompile Include="..\Code\Turret.cpp" />
+    <ClCompile Include="..\Code\Tree.cpp" />
+    <ClCompile Include="..\Code\UI_Pages.cpp" />
+    <ClCompile Include="..\Header\Tile.cpp" />
+    <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
+    <ClCompile Include="Grass.cpp" />
+    <ClCompile Include="..\Code\Item_Hat_Turtle.cpp">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Item_Hat_Drill.cpp">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Item_Hat_Light.cpp">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Item_Hat_Mask.cpp">
+      <Filter>02. GameObject\11. Item</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Player_Skill_Barrier.cpp" />
+    <ClCompile Include="..\Code\Player_Skill_Turtle.cpp" />
+    <ClCompile Include="..\Code\Player_Skill_Drill.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
