--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -274,6 +274,7 @@
     <ClInclude Include="..\Header\Catapult.h" />
     <ClInclude Include="..\Header\UI_HPBar.h" />
     <ClInclude Include="..\Header\UI_NameTag.h" />
+    <ClInclude Include="..\Header\UI_Shop.h" />
     <ClInclude Include="..\Header\UI_ShortCutKey.h" />
     <ClInclude Include="..\Header\UI_Totem.h" />
     <ClInclude Include="Client.h" />
@@ -375,6 +376,7 @@
     <ClCompile Include="..\Code\Catapult.cpp" />
     <ClCompile Include="..\Code\UI_HPBar.cpp" />
     <ClCompile Include="..\Code\UI_NameTag.cpp" />
+    <ClCompile Include="..\Code\UI_Shop.cpp" />
     <ClCompile Include="..\Code\UI_Totem.cpp" />
     <ClCompile Include="..\Header\Tile.cpp" />
     <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
